--- a/pagina1.html
+++ b/pagina1.html
@@ -4,9 +4,22 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="pagina1.css">
+    <!-- UIkit CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/css/uikit.min.css" />
+
+<!-- UIkit JS -->
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
   </head>
   <body>
-
+<div class="todo">
+  <header>
+    <ul>
+      <li>home</li>
+      <li>generos</li>
+    </ul>
+  </header>
+</div>
 
 
 <script type="text/javascript" src="pagina1.js">
