--- a/pagina2.html
+++ b/pagina2.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/master.css">
     <title>Listado por generos</title>
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/css/uikit.min.css" />
 
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
   </head>
   <body>
     <li>
