--- a/pagina1.html
+++ b/pagina1.html
@@ -13,12 +13,19 @@
   </head>
   <body>
 <div class="todo">
-  <header>
-    <ul>
-      <li>home</li>
-      <li>generos</li>
-    </ul>
+<header>
+      <nav>
+          <ul class="ul-menu">
+              <li class="li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
+              <li class="li-menu"><a class="a-menu" href=pagina2.html>Series</a></li>
+              <li class="li-menu"><a class="a-menu" href=pagina3.html>Generos</a></li>
+              <li class="li-menu"><a class="a-menu" href=pagina4.html>Contacto</a></li>
+          </ul>
+      </nav>
   </header>
+
+
+
 </div>
 
 
