--- a/pagina2.html
+++ b/pagina2.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="pagina2.css">
     <title>Listado por generos</title>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/css/uikit.min.css" />
@@ -12,10 +12,27 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
   </head>
   <body>
-    <li>
-      <ul> <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.."> </ul>
-      <ul> hola</ul>
-      <ul> </ul>
-    </li>
+    <div class="todo">
+    <header>
+          <nav>
+              <ul class="ul-menu">
+                  <li class="li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
+                  <li class="li-menu"><a class="a-menu" href=pagina2.html>Series</a></li>
+                  <li class="li-menu"><a class="a-menu" href=pagina3.html>Generos</a></li>
+                  <li class="li-menu"><a class="a-menu" href=pagina4.html>Contacto</a></li>
+                  <li><input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.."></li>
+              </ul>
+          </nav>
+      </header>
+
+
+
+    </div>
+
+
+    <script type="text/javascript" src="pagina1.js">
+
+    </script>
+
   </body>
 </html>
