unos cambios mas a la barra

--- a/pagina2.html
+++ b/pagina2.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="todo">
+<!--   Barra de Navegacion   -->
     <header>
           <nav>
               <ul class="ul-menu">
@@ -20,12 +21,12 @@
                   <li class="li-menu"><a class="a-menu" href=pagina2.html>Series</a></li>
                   <li class="li-menu"><a class="a-menu" href=pagina3.html>Generos</a></li>
                   <li class="li-menu"><a class="a-menu" href=pagina4.html>Contacto</a></li>
-                  <li><input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.."></li>
+                  <li><input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.."></li> <!--Buscador-->
               </ul>
           </nav>
       </header>
 
-
+<!--Fin de Navegacion-->
 
     </div>
 
