--- a/pagina2.html
+++ b/pagina2.html
@@ -27,7 +27,33 @@
       </header>
 
 <!--Fin de Navegacion-->
+<!--Listado generos con img-->
 
+<article class="genero">
+  <h1>Genero 1</h1>
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+</article>
+
+<article class="genero">
+  <h1>Genero 2</h1>
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+</article>
+
+<article class="genero">
+  <h1>Genero 3</h1>
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+</article>
+
+<article class="genero">
+  <h1>Genero 4</h1>
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+</article>
+
+<!--Fin de listado generos -->
     </div>
 
 
