--- a/pagina2.html
+++ b/pagina2.html
@@ -13,20 +13,24 @@
   </head>
   <body>
     <div class="todo">
-<!--   Barra de Navegacion   -->
-    <header>
-          <nav>
-              <ul class="ul-menu">
-                  <li class="li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
-                  <li class="li-menu"><a class="a-menu" href=pagina2.html>Series</a></li>
-                  <li class="li-menu"><a class="a-menu" href=pagina3.html>Generos</a></li>
-                  <li class="li-menu"><a class="a-menu" href=pagina4.html>Contacto</a></li>
-                  <li><input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.."></li> <!--Buscador-->
-              </ul>
-          </nav>
-      </header>
+      <!--   Header   -->
+          <header>
+                <nav>
+                  <div class="buscador">
+                    <input type="search" placeholder="Buscar..." name="" value="">
+                  </div>
+                    <ul class="ul-menu">
+                        <li class="li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
+                        <li class="li-menu"><a class="a-menu" href=pagina2.html>Series</a></li>
+                        <li class="li-menu"><a class="a-menu" href=pagina3.html>Generos</a></li>
+                        <li class="li-menu"><a class="a-menu" href=pagina4.html>Contacto</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-<!--Fin de Navegacion-->
+      <!-- Header -->
+
+<!--Header-->
 <!--Listado generos con img-->
 
 <article class="genero">
