--- a/pagina2.html
+++ b/pagina2.html
@@ -28,31 +28,34 @@
 
 <!--Fin de Navegacion-->
 <!--Listado generos con img-->
+<div class="container">
 
-<article class="genero">
-  <h1>Genero 1</h1>
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-</article>
 
-<article class="genero">
-  <h1>Genero 2</h1>
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-</article>
+  <article class="genero">
+    <h1>Genero 1</h1>
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  </article>
 
-<article class="genero">
-  <h1>Genero 3</h1>
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-</article>
+  <article class="genero">
+    <h1>Genero 2</h1>
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  </article>
 
-<article class="genero">
-  <h1>Genero 4</h1>
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-  <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-</article>
+  <article class="genero">
+    <h1>Genero 3</h1>
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  </article>
 
+  <article class="genero">
+    <h1>Genero 4</h1>
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+  </article>
+
+  </div>
 <!--Fin de listado generos -->
     </div>
 
