--- a/pagina1.html
+++ b/pagina1.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="pagina1.css">
     <!-- UIkit CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/css/uikit.min.css" />
 
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
+<link rel="stylesheet" href="pagina1.css">
   </head>
   <body>
 <div class="todo">
@@ -43,58 +43,102 @@
 
   <!-- Header -->
 
-<p>Peliculas mas vistas</p>
+<p>Peliculas Populares</p>
 
- <!-- Carrousel Mas Vistas -->
- <div class="uk-position-relative uk-visible-toggle uk-light div-CarrouselMasVistos" tabindex="-1" uk-slider>
+ <!-- Carrousel populares -->
+ <div uk-slider="center: true">
 
-     <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
-         <li>
-             <img src="C:\Users\ian_j\OneDrive\Documentos\UDESA\SEMESTRE 2\Programación 1\Trabajo Integrador\ProyectoFINAL\imagenes\testing.jpg" alt="">
-             <div class="uk-position-center uk-panel"><h1>1</h1></div>
-         </li>
-     </ul>
+     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-     <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-     <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+         <ul id="populares" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
 
- </div>
- <!-- Carrousel Mas Vistas -->
+         </ul>
 
-<p>Peliculas Destacadas</p>
+         <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+         <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
 
- <!-- Carrousel Destacados -->
- <div class="uk-position-relative uk-visible-toggle uk-light div-CarrouselDestacads" tabindex="-1" uk-slider>
+     </div>
 
-     <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
-         <li>
-             <img src="C:\Users\ian_j\OneDrive\Documentos\UDESA\SEMESTRE 2\Programación 1\Trabajo Integrador\ProyectoFINAL\imagenes\testing.jpg" alt="">
-             <div class="uk-position-center uk-panel"><h1>1</h1></div>
-         </li>
-     </ul>
-
-     <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-     <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+     <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
 
  </div>
- <!-- Carrousel Destacados -->
+ <!-- Carrousel populares -->
+
+<p>Peliculas Al Aire</p>
+
 
 <p>Generos</p>
 
  <!-- Carrousel Generos -->
- <div class="uk-position-relative uk-visible-toggle uk-light div-CarrouselGeneros" tabindex="-1" uk-slider>
+ <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
-     <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
-         <li>
-             <img src="C:\Users\ian_j\OneDrive\Documentos\UDESA\SEMESTRE 2\Programación 1\Trabajo Integrador\ProyectoFINAL\imagenes\testing.jpg" alt="">
-             <div class="uk-position-center uk-panel"><h1>1</h1></div>
-         </li>
-     </ul>
+    <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m uk-grid">
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider1.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>1</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider2.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>2</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider3.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>3</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider4.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>4</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider5.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>5</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider1.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>6</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider2.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>7</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider3.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>8</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider4.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>9</h1></div>
+            </div>
+        </li>
+        <li>
+            <div class="uk-panel">
+                <img src="images/slider5.jpg" alt="">
+                <div class="uk-position-center uk-panel"><h1>10</h1></div>
+            </div>
+        </li>
+    </ul>
 
-     <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-     <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
 
- </div>
+</div>
  <!-- Carrousel Generos -->
 
 </div>
