--- a/pagina1.html
+++ b/pagina1.html
@@ -144,8 +144,6 @@
 </div>
 
 
-<script type="text/javascript" src="pagina1.js">
-
-</script>
+<script type="text/javascript" src="pagina1.js"></script>
   </body>
 </html>
