--- a/pagina1.html
+++ b/pagina1.html
@@ -43,7 +43,7 @@
 
   <!-- Header -->
 
-<p>Peliculas Populares</p>
+<h2>Peliculas Populares</h2>
 
  <!-- Carrousel populares -->
  <div uk-slider="center: true">
@@ -59,7 +59,7 @@
 
      </div>
 
-     <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+     <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
 
  </div>
  <!-- Carrousel populares -->
