--- a/pagina1.html
+++ b/pagina1.html
@@ -28,9 +28,8 @@
               <li class="uk-active li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
               <li><a class="a-menu li-menu" href=pagina2.html>Generos</a>
                 <div class="uk-navbar-dropdown">
-                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li><a href="#">Item</a></li>
-                        <li><a href="#">Item</a></li>
+                    <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
+                        
                     </ul>
                 </div>
               </li>
@@ -43,7 +42,7 @@
 
   <!-- Header -->
 
-<h2>Peliculas Populares</h2>
+<h2>Populares</h2>
 
  <!-- Carrousel populares -->
  <div uk-slider="center: true">
@@ -64,82 +63,47 @@
  </div>
  <!-- Carrousel populares -->
 
-<p>Peliculas Al Aire</p>
+<h2>Mejor valoradas</h2>
 
+<!-- Carrousel Valoradas -->
+<div uk-slider="center: true">
 
-<p>Generos</p>
+    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
- <!-- Carrousel Generos -->
- <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+        <ul id="valoradas" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
 
-    <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m uk-grid">
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider1.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>1</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider2.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>2</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider3.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>3</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider4.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>4</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider5.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>5</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider1.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>6</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider2.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>7</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider3.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>8</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider4.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>9</h1></div>
-            </div>
-        </li>
-        <li>
-            <div class="uk-panel">
-                <img src="images/slider5.jpg" alt="">
-                <div class="uk-position-center uk-panel"><h1>10</h1></div>
-            </div>
-        </li>
-    </ul>
+        </ul>
 
-    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+
+    </div>
+
+    <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
 
 </div>
- <!-- Carrousel Generos -->
+<!-- Carrousel Valoradas -->
+
+<h2>Al aire hoy</h2>
+
+ <!-- Carrousel Aire Hoy -->
+ <div uk-slider="center: true">
+
+     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+
+         <ul id="aire" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+
+         </ul>
+
+         <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+         <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+
+     </div>
+
+     <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
+
+ </div>
+ <!-- Carrousel Aire Hoy -->
 
 </div>
 
