--- a/pagina2.html
+++ b/pagina2.html
@@ -28,9 +28,8 @@
                   <li class="uk-active li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
                   <li><a class="a-menu li-menu" href=pagina2.html>Generos</a>
                     <div class="uk-navbar-dropdown">
-                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
+                        <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
+
                         </ul>
                     </div>
                   </li>
@@ -43,7 +42,7 @@
 
       <!-- Header -->
 
-      
+
 <!--Listado generos con img-->
 <div class="container">
 
