--- a/pagina2.html
+++ b/pagina2.html
@@ -80,6 +80,105 @@
     </div>
   </article>
 
+  <article class="genero">
+    <h1>Genero 1</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 2</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+
+  <article class="genero">
+    <h1>Genero 3</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 4</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 1</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 2</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+
+  <article class="genero">
+    <h1>Genero 3</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 4</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 1</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 2</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+
+  <article class="genero">
+    <h1>Genero 3</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Genero 4</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
   </div>
 <!--Fin de listado generos -->
     </div>
