--- a/pagina2.html
+++ b/pagina2.html
@@ -48,7 +48,7 @@
 
 
   <article class="genero">
-    <h1>Genero 1</h1>
+    <h1>Action and Adventure</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
@@ -56,40 +56,7 @@
   </article>
 
   <article class="genero">
-    <h1>Genero 2</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-
-  <article class="genero">
-    <h1>Genero 3</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-  <article class="genero">
-    <h1>Genero 4</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-  <article class="genero">
-    <h1>Genero 1</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-  <article class="genero">
-    <h1>Genero 2</h1>
+    <h1>Animation</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
@@ -98,7 +65,7 @@
 
 
   <article class="genero">
-    <h1>Genero 3</h1>
+    <h1>Comedy</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
@@ -106,7 +73,7 @@
   </article>
 
   <article class="genero">
-    <h1>Genero 4</h1>
+    <h1>Crime</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
@@ -114,7 +81,7 @@
   </article>
 
   <article class="genero">
-    <h1>Genero 1</h1>
+    <h1>Documentary</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
@@ -122,40 +89,7 @@
   </article>
 
   <article class="genero">
-    <h1>Genero 2</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-
-  <article class="genero">
-    <h1>Genero 3</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-  <article class="genero">
-    <h1>Genero 4</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-  <article class="genero">
-    <h1>Genero 1</h1>
-    <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-    </div>
-  </article>
-
-  <article class="genero">
-    <h1>Genero 2</h1>
+    <h1>Drama</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
@@ -164,7 +98,7 @@
 
 
   <article class="genero">
-    <h1>Genero 3</h1>
+    <h1>Family</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
@@ -172,7 +106,73 @@
   </article>
 
   <article class="genero">
-    <h1>Genero 4</h1>
+    <h1>Kids</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Mystery</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>News</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+
+  <article class="genero">
+    <h1>Reality</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Sci-Fi & Fantasy</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Soap</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Talk</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+
+  <article class="genero">
+    <h1>War & Politics</h1>
+    <div class="imgcont">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+    </div>
+  </article>
+
+  <article class="genero">
+    <h1>Western</h1>
     <div class="imgcont">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
       <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
