--- a/pagina3.html
+++ b/pagina3.html
@@ -48,7 +48,7 @@
 
                  <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-                     <ul id="genero" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+                     <ul id="populares" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
 
                      </ul>
 
@@ -61,6 +61,6 @@
 
              </div>
              <!-- Carrousel populares -->
-      <script type="text/javascript" src="pagina3.js"></script>
+<script type="text/javascript" src="pagina3.js"></script>
   </body>
 </html>
