--- a/pagina1.html
+++ b/pagina1.html
@@ -29,7 +29,7 @@
               <li><a class="a-menu li-menu" href=pagina2.html>Generos</a>
                 <div class="uk-navbar-dropdown">
                     <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
-                        
+
                     </ul>
                 </div>
               </li>
@@ -105,6 +105,14 @@
  </div>
  <!-- Carrousel Aire Hoy -->
 
+<!-- footer -->
+<a class="logoa" href="https://www.themoviedb.org/">
+<footer>
+  <img class="logo" src="imagenes/tmdblogo.svg" alt="">
+  <p class="firma">Ian Jamui, Timoteo, Bruno</p>
+</footer>
+</a>
+<!-- footer -->
 </div>
 
 
