--- a/detalle.html
+++ b/detalle.html
@@ -55,6 +55,10 @@
 
     <p id="generos" class="uk-article-meta">Generos: </p>
     <p id="idioma" class="uk-article-meta">Idioma original: </p>
+    <p id="ulEpisodio" class="uk-article-meta">Ultimo Episodio: </p>
+    <p id="proxEpisodio" class="uk-article-meta">Proximo Episodio: </p>
+    <p id="temporadas" class="uk-article-meta">Temporadas: </p>
+    <p id="episodios" class="uk-article-meta">Episodios: </p>
 
     <p id="overview" class="uk-text-lead">Sinopsis: </p>
 
@@ -67,7 +71,14 @@
 
 
 </article>
-
+<!-- footer ARREGLARRRRRRRRRRRRR--> 
+<a class="logoa" href="https://www.themoviedb.org/">
+<footer>
+  <img class="logo" src="imagenes/tmdblogo.svg" alt="">
+  <p class="firma">Ian Jamui, Timoteo, Bruno</p>
+</footer>
+</a>
+<!-- footer -->
 </div>
 
 
