--- a/pagina1.html
+++ b/pagina1.html
@@ -33,7 +33,19 @@
                     </ul>
                 </div>
               </li>
-              <li><a class="a-menu li-menu" href=pagina3.html>Series</a></li>
+              <li class="li-menu"><a class="a-menu li-menu" href=pagina3.html>Series</a></li>
+              <li>
+                <div class="uk-button-group">
+    <button class="uk-button uk-button-default"></button>
+    <div class="uk-inline">
+
+        <!-- The button toggling the dropdown -->
+        <button class="uk-button uk-button-default" type="button"></button>
+        <div uk-dropdown="mode: click; boundary: ! .uk-button-group; boundary-align: true;"></div>
+
+    </div>
+</div>
+              </li>
             </ul>
 
     </div>
@@ -41,6 +53,15 @@
         </header>
 
   <!-- Header -->
+  <!-- Log in -->
+<FORM name=form action="TU_PAGINA_WEB.HTML">
+
+<P>Usuario:    <INPUT type=text name=login>
+<P>Contraseña: <INPUT type=password name=password>
+<INPUT onclick=go() type=button value=Acceder>
+
+</FORM>
+<!-- Log in -->
 
 <h2>Populares</h2>
 
