--- a/detalle.html
+++ b/detalle.html
@@ -32,7 +32,7 @@
                       </ul>
                   </div>
                 </li>
-                <li><a class="a-menu li-menu" href=pagina3.html>Series</a></li>
+                <li><a class="a-menu li-menu" href=pagina3.html>Favoritos</a></li>
               </ul>
 
       </div>
@@ -71,7 +71,7 @@
 
 
 </article>
-<!-- footer ARREGLARRRRRRRRRRRRR--> 
+<!-- footer ARREGLARRRRRRRRRRRRR-->
 <a class="logoa" href="https://www.themoviedb.org/">
 <footer>
   <img class="logo" src="imagenes/tmdblogo.svg" alt="">
