--- a/pagina2.html
+++ b/pagina2.html
@@ -33,7 +33,7 @@
                         </ul>
                     </div>
                   </li>
-                  <li><a class="a-menu li-menu" href=pagina3.html>Series</a></li>
+                  <li><a class="a-menu li-menu" href=pagina3.html>Favoritos</a></li>
                 </ul>
 
         </div>
