--- a/detalle.html
+++ b/detalle.html
@@ -52,23 +52,24 @@
 <article class="uk-article art">
 
     <h1 id="titulo" class="uk-article-title">Titulo</h1>
-
     <p id="generos" class="uk-article-meta">Generos: </p>
+    <p id="puntaje" class="uk-article-meta">Puntaje: </p>
     <p id="idioma" class="uk-article-meta">Idioma original: </p>
     <p id="ulEpisodio" class="uk-article-meta">Ultimo Episodio: </p>
     <p id="proxEpisodio" class="uk-article-meta">Proximo Episodio: </p>
     <p id="temporadas" class="uk-article-meta">Temporadas: </p>
     <p id="episodios" class="uk-article-meta">Episodios: </p>
-
     <p id="overview" class="uk-text-lead">Sinopsis: </p>
-
     <div class="uk-grid-small uk-child-width-auto" uk-grid>
         <div id="leerMas">
 
         </div>
-        <p id="puntaje" class="uk-button">Puntaje: </p>
-    </div>
 
+        <p id="idioma" class="uk-article-meta">Trailers: </p>
+    </div>
+    <div id="videosTodos">
+
+</div>
 
 </article>
 <!-- footer ARREGLARRRRRRRRRRRRR-->
