--- a/pagina3.html
+++ b/pagina3.html
@@ -41,7 +41,7 @@
             </header>
 
 
-            <h2>Genero</h2>
+            <h2 class="h2genero">Genero</h2>
 
              <!-- Carrousel populares -->
              <div uk-slider="center: true">
