--- a/pagina2.html
+++ b/pagina2.html
@@ -33,6 +33,7 @@
                         </ul>
                     </div>
                   </li>
+                  <li><a class="a-menu li-menu" href=pagina4.html>despues reubico (no tocar)</a>
                   <li><a class="a-menu li-menu" href=pagina3.html>Favoritos</a></li>
                 </ul>
 
