modificando java de pagina 4

--- a/pagina2.html
+++ b/pagina2.html
@@ -49,10 +49,10 @@
 
 
   <article class="genero">
-    <h1>Action and Adventure</h1>
+    <h1><a href="pagina4.html">Action and Adventure</a></h1>
     <div class="imgcont">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
-      <img src="imagenes/testing.jpg" alt="Testing" width="200" height="200">
+      <a href="pagina4.html"><img src="imagenes/testing.jpg" alt="Testing" width="200" height="200"> </a>
+      <a href="pagina4.html"><img src="imagenes/testing.jpg" alt="Testing" width="200" height="200"> </a>
     </div>
   </article>
 
