--- a/pagina4.html
+++ b/pagina4.html
@@ -33,7 +33,7 @@
                         </ul>
                     </div>
                   </li>
-                  <li><a class="a-menu li-menu" href=pagina3.html>Series</a></li>
+                  <li><a class="a-menu li-menu" href=pagina4.html>Series</a></li>
                 </ul>
 
         </div>
@@ -48,7 +48,7 @@
 
                  <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-                     <ul id="populares" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+                     <ul id="genclick" class="uk-slider-items uk-child-width-1-2@s uk-grid genclick">
 
                      </ul>
 
@@ -61,6 +61,6 @@
 
              </div>
              <!-- Carrousel populares -->
-<script type="text/javascript" src="pagina3.js"></script>
+<script type="text/javascript" src="pagina4.js"></script>
   </body>
 </html>
