--- a/detalle.html
+++ b/detalle.html
@@ -16,6 +16,8 @@
         <header>
           <nav class="uk-navbar-container navMia" uk-navbar>
             <div class="buscador">
+              <a class="logoHeader" href="https://www.themoviedb.org/">
+              <img  class="logo" src="imagenes/tmdblogo.svg" alt=""></a>
               <form class="uk-search uk-search-default">
                 <span uk-search-icon></span>
                 <input class="uk-search-input buscar" type="search" placeholder="Buscar...">
@@ -32,11 +34,19 @@
                       </ul>
                   </div>
                 </li>
+                <li><a class="a-menu li-menu" href=pagina2.html>Secciones</a>
+                  <div class="uk-navbar-dropdown">
+                      <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
+                        <li><a href="populares.html">Populares</a></li>
+                        <li><a href="valoradas.html">Mejor Valorados</a></li>
+                        <li><a href="alaire.html">Al aire ahora</a></li>
+                      </ul>
+                  </div>
                 <li><a class="a-menu li-menu" href=pagina3.html>Favoritos</a></li>
               </ul>
 
       </div>
-  </nav>
+    </nav>
           </header>
 
     <!-- Header -->
@@ -59,19 +69,49 @@
     <p id="proxEpisodio" class="uk-article-meta">Proximo Episodio: </p>
     <p id="temporadas" class="uk-article-meta">Temporadas: </p>
     <p id="episodios" class="uk-article-meta">Episodios: </p>
-    
+
     <p id="overview" class="uk-text-lead">Sinopsis: </p>
     <div class="uk-grid-small uk-child-width-auto" uk-grid>
         <div id="leerMas">
 
         </div>
     </div>
+    <input type="hidden" id="producto-id" value="12345" />
+
+    <a href="#" id="agregar-favoritos">
+    <p id="textoFavoritos">
+      Agregar a favoritos
+    </p>
+    </a>
+
     <p id="idioma" class="uk-article-meta">Trailers: </p>
     <div id="videosTodos">
 
     </div>
 </article>
-<!-- footer ARREGLARRRRRRRRRRRRR-->
+</div>
+
+ <!-- Carrousel Relacionadas -->
+ <h2>Programas Realacionados</h2>
+ <div uk-slider="center: true">
+
+     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+
+         <ul id="relacionados" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+
+         </ul>
+
+         <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+         <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+
+     </div>
+
+     <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
+
+ </div>
+ <!-- Carrousel Relacionadas -->
+
+<!-- footer -->
 <a class="logoa" href="https://www.themoviedb.org/">
 <footer>
   <img class="logo" src="imagenes/tmdblogo.svg" alt="">
@@ -79,7 +119,7 @@
 </footer>
 </a>
 <!-- footer -->
-</div>
+
 
 
   </body>
