--- a/pagina4.html
+++ b/pagina4.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="pagina3.css">
+    <link rel="stylesheet" href="pagina4.css">
     <title>Listado por generos</title>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/css/uikit.min.css" />
@@ -43,24 +43,25 @@
 
             <h2 class="h2genero">Genero</h2>
 
-             <!-- Carrousel populares -->
-             <div uk-slider="center: true">
+            <!-- Carrousel populares -->
+            <div uk-slider="center: true">
 
-                 <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+                <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-                     <ul id="genclick" class="uk-slider-items uk-child-width-1-2@s uk-grid genclick">
+                    <ul id="populares" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
 
-                     </ul>
+                    </ul>
 
-                     <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-                     <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+                    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+                    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
 
-                 </div>
+                </div>
 
-                 <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
+                <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
 
-             </div>
-             <!-- Carrousel populares -->
+            </div>
+            <!-- Carrousel populares -->
+
 <script type="text/javascript" src="pagina4.js"></script>
   </body>
 </html>
