--- a/pagina4.html
+++ b/pagina4.html
@@ -41,7 +41,7 @@
             </header>
 
 
-            <h2 class="h2genero">Genero</h2>
+            <h2 id="genid">Genero</h2>
 
             <!-- Carrousel populares -->
             <div uk-slider="center: true">
