--- a/detalle.html
+++ b/detalle.html
@@ -26,7 +26,7 @@
             <div class="uk-navbar-right">
 
               <ul class="uk-navbar-nav">
-                <li class="uk-active li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
+                <li class="uk-active li-menu"><a class="a-menu" href=home.html>Home</a></li>
                 <li><a class="a-menu li-menu" href=pagina2.html>Generos</a>
                   <div class="uk-navbar-dropdown">
                       <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
@@ -42,7 +42,7 @@
                         <li><a href="alaire.html">Al aire ahora</a></li>
                       </ul>
                   </div>
-                <li><a class="a-menu li-menu" href=pagina3.html>Favoritos</a></li>
+                <li><a class="a-menu li-menu" href=favoritas.html>Favoritos</a></li>
               </ul>
 
       </div>
