--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
-<link rel="stylesheet" href="pagina1.css">
+<link rel="stylesheet" href="home.css">
   </head>
   <body>
 <div class="todo">
@@ -27,7 +27,7 @@
           <div class="uk-navbar-right">
 
             <ul class="uk-navbar-nav">
-              <li class="uk-active li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
+              <li class="uk-active li-menu"><a class="a-menu" href=home.html>Home</a></li>
               <li><a class="a-menu li-menu" href=pagina2.html>Generos</a>
                 <div class="uk-navbar-dropdown">
                     <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
@@ -43,7 +43,7 @@
                       <li><a href="alaire.html">Al aire ahora</a></li>
                     </ul>
                 </div>
-              <li><a class="a-menu li-menu" href=pagina3.html>Favoritos</a></li>
+              <li><a class="a-menu li-menu" href=favoritas.html>Favoritos</a></li>
             </ul>
 
     </div>
@@ -125,6 +125,6 @@
 </div>
 
 
-<script type="text/javascript" src="pagina1.js"></script>
+<script type="text/javascript" src="home.js"></script>
   </body>
 </html>
