--- a/pagina3.html
+++ b/pagina3.html
@@ -17,6 +17,8 @@
           <header>
             <nav class="uk-navbar-container navMia" uk-navbar>
               <div class="buscador">
+                <a class="logoHeader" href="https://www.themoviedb.org/">
+                <img  class="logo" src="imagenes/tmdblogo.svg" alt=""></a>
                 <form class="uk-search uk-search-default">
                   <span uk-search-icon></span>
                   <input class="uk-search-input buscar" type="search" placeholder="Buscar...">
@@ -25,7 +27,7 @@
               <div class="uk-navbar-right">
 
                 <ul class="uk-navbar-nav">
-                  <li class="uk-active li-menu"><a class="a-menu" href=pagina1.html>Home</a></li>
+                  <li class="uk-active li-menu"><a class="a-menu" href=home.html>Home</a></li>
                   <li><a class="a-menu li-menu" href=pagina2.html>Generos</a>
                     <div class="uk-navbar-dropdown">
                         <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
@@ -33,13 +35,22 @@
                         </ul>
                     </div>
                   </li>
-                  <li><a class="a-menu li-menu" href=pagina3.html>Series</a></li>
+                  <li><a class="a-menu li-menu" href=pagina2.html>Secciones</a>
+                    <div class="uk-navbar-dropdown">
+                        <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
+                          <li><a href="populares.html">Populares</a></li>
+                          <li><a href="valoradas.html">Mejor Valorados</a></li>
+                          <li><a href="alaire.html">Al aire ahora</a></li>
+                        </ul>
+                    </div>
+                  <li><a class="a-menu li-menu" href=favoritas.html>Favoritos</a></li>
                 </ul>
 
         </div>
-    </nav>
+      </nav>
             </header>
 
+      <!-- Header -->
 
             <h2 class="h2genero">Genero</h2>
 
