--- a/favoritas.html
+++ b/favoritas.html
@@ -53,6 +53,7 @@
           </header>
 
     <!-- Header -->
+    
     <h2>Programas mejor valorados</h2>
 <!-- Lista -->
 <div class="uk-overflow-auto">
@@ -63,6 +64,7 @@
                 <th class="uk-width-small">Nombre</th>
                 <th class="uk-table-expand">Sinopsis</th>
                 <th class="uk-table-shrink uk-text-nowrap">Valoracion</th>
+                <th class="uk-table-shrink uk-text-nowrap">Quitar</th>
             </tr>
         </thead>
         <tbody id="tbfavoritas">
