--- a/favoritas.html
+++ b/favoritas.html
@@ -30,14 +30,14 @@
 
               <ul class="uk-navbar-nav">
                 <li class="uk-active li-menu"><a class="a-menu" href=home.html>Home</a></li>
-                <li><a class="a-menu li-menu" href=pagina2.html>Generos</a>
+                <li><a class="a-menu li-menu" href=generos.html>Generos</a>
                   <div class="uk-navbar-dropdown">
                       <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
 
                       </ul>
                   </div>
                 </li>
-                <li><a class="a-menu li-menu" href=pagina2.html>Secciones</a>
+                <li><a class="a-menu li-menu" href=home.html>Secciones</a>
                   <div class="uk-navbar-dropdown">
                       <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="populares.html">Populares</a></li>
@@ -53,7 +53,7 @@
           </header>
 
     <!-- Header -->
-    
+
     <h2>Programas mejor valorados</h2>
 <!-- Lista -->
 <div class="uk-overflow-auto">
