--- a/generos.html
+++ b/generos.html
@@ -9,10 +9,10 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
-<script src="alaire.js" type="text/javascript">
+<script src="generos.js" type="text/javascript">
 
 </script>
-<link rel="stylesheet" href="alaire.css">
+<link rel="stylesheet" href="generos.css">
   </head>
   <body>
     <!--   Header   -->
@@ -53,19 +53,16 @@
           </header>
 
     <!-- Header -->
-    <h2>Programas Al Aire</h2>
+    <h2>Generos</h2>
 <!-- Lista -->
-<div class="uk-overflow-auto">
+<div class="uk-overflow-auto uk-table-middle">
     <table class="uk-table uk-table-hover uk-table-middle uk-table-divider">
         <thead>
             <tr>
-                <th class="uk-table-shrink">Foto</th>
-                <th class="uk-table-expand">Nombre</th>
-                <th class="uk-table-expand">Sinopsis</th>
-                <th class="uk-table-shrink uk-text-nowrap">Valoracion</th>
+                <th class="uk-table-expand uk-table-middle">Nombre</th>
             </tr>
         </thead>
-        <tbody id="tbalaire">
+        <tbody id="tbgeneros">
 
         </tbody>
     </table>
