--- a/valoradas.html
+++ b/valoradas.html
@@ -56,7 +56,7 @@
     <h2>Programas mejor valorados</h2>
 <!-- Lista -->
 <div class="uk-overflow-auto">
-    <table class="uk-table uk-table-hover uk-table-middle uk-table-divider">
+    <table id="infinite-list" class="uk-table uk-table-hover uk-table-middle uk-table-divider">
         <thead>
             <tr>
                 <th class="uk-table-shrink">Foto</th>
