--- a/favoritas.html
+++ b/favoritas.html
@@ -8,10 +8,8 @@
 
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
-<script src="favoritas.js" type="text/javascript">
 
-</script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
 <link rel="stylesheet" href="favoritas.css">
   </head>
   <body>
@@ -54,7 +52,7 @@
 
     <!-- Header -->
 
-    <h2>Programas mejor valorados</h2>
+    <h2>Favoritos</h2>
 <!-- Lista -->
 <div class="uk-overflow-auto">
     <table class="uk-table uk-table-hover uk-table-middle uk-table-divider">
@@ -78,9 +76,10 @@
     <a class="logoa" href="https://www.themoviedb.org/">
     <footer>
       <img class="logo" src="imagenes/tmdblogo.svg" alt="">
-      <p class="firma">Ian Jamui, Timoteo, Bruno</p>
+      <p class="firma">Ian Jamui, Timoteo Karl, Bruno</p>
     </footer>
     </a>
     <!-- footer -->
+    <script src="favoritas.js" type="text/javascript"></script>
   </body>
 </html>
